--- a/Section 5: HTML: Forms & Tables/forms.html
+++ b/Section 5: HTML: Forms & Tables/forms.html
@@ -18,7 +18,7 @@
     <form action="/forms">
         <label for="Email">Enter Your E-Mail </label>
         <br>
-        <input id="Email" type="text" placeholder="exammple@domain.com">
+        <input id="Email" type="text" placeholder="example@domain.com">
         <br>
         <br>
         <label for="Username">Create a Username</label>
