--- a/Section 5: HTML: Forms & Tables/movie_form.html
+++ b/Section 5: HTML: Forms & Tables/movie_form.html
@@ -1,14 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Night Movies Form</Form>
-    </title>
-</head>
-
 <body>
     <h1>ALL NIGHT MOVIES </h1>
     <form action="https://www.imdb.com/find/">
@@ -20,27 +9,29 @@
     <form action="/forms">
         <label for="Email">Enter Your E-Mail </label>
         <br>
-        <input id="Email" type="text" placeholder="example@domain.com">
+        <input id="Email" type="text" placeholder="example@domain.com" required>
         <br>
         <br>
         <label for="Username">Create a Username</label>
         <br>
-        <input id="Username" type="text" placeholder="Username:">
+        <input id="Username" type="text" placeholder="Username:" minlength="5" maxlength="15" required>
         <br>
         <br>
         <label for="Password">Create a Password</label>
         <br>
-        <input id="Password" type="password" placeholder="Password:">
+        <input id="Password" type="password" placeholder="Password:" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-]).{8,20}$"
+            title="Minimum of 8 characters. Should have at least one special character and one number and one UpperCase Letter." required>
         <br>
         <br>
         <label for="start">Date of Birth</label>
         <br>
-        <input type="date" id="start" name="trip-start" value="2023-01-31" min="1950-01-01" max="2023-12-31">
+        <input type="date" id="start" name="trip-start" value="2023-01-31" min="1950-01-01" max="2023-12-31" required>
         <br>
         <h3>Secuirty Question</h3>
         <label for="MovieFood">What is your movie theater food of choice? </label>
         <br>
-        <select name="moviefood" id="MovieFood">
+        <select name="moviefood" id="MovieFood" required>
+            <option value="">--Choose One--</option>
             <option value="Soda">Soda</option>
             <option value="Popcorn">Popcorn </option>
             <option value="Candy">Candy</option>
@@ -48,10 +39,13 @@
         </select>
         <br>
         <h3> Submit Your Account </h3>
+        <input type="checkbox" name="Agree_TOS" id="AgreeTOS" required>
+        <label for="AgreeTOS">I Agree to the Terms and Conditions</label>
+        <br>
+        <br>
+        <button>Submit</button>
     </form>
-    <input type="checkbox" name="Agree_TOS" id="AgreeTOS">
-    <label for="AgreeTOS">I Agree to the Terms and Conditions</label>
-    <br>
+    <input type="submit" style="color: transparent; background-color: transparent; border-color: transparent; cursor: default;">
     <br>
     <form action="https://www.youtube.com/watch" method="get">
         <input type="hidden" name="v" value="eBGIQ7ZuuiU">
@@ -69,5 +63,6 @@
         <button>Review</button>
     </form>
 </body>
+
 
 </html>
