--- a/Section 5: HTML: Forms & Tables/Register_Form.html
+++ b/Section 5: HTML: Forms & Tables/Register_Form.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Race Registaration</title>
+    <title>Registaration Form</title>
 </head>
 
 <body>
-    <h1>Race Registaration </h1>
+    <h1>Race Registaration! </h1>
     <form action="/forms">
 
         <div>
@@ -28,7 +28,6 @@
         <label for="fm">Full Marathon</label>
         <div>
             <label for="Email">E-Mail</label>
-            <br>
             <input id="Email" type="text" required>
             <label for="Password">Password</label>
             <input id="Password" type="password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-]).{8,20}$"
