--- a/Section 9: Other Assorted Useful CSS Properties/Button/index.html
+++ b/Section 9: Other Assorted Useful CSS Properties/Button/index.html
@@ -1,24 +1,16 @@
-body {
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: #22223b;
-}
+<!DOCTYPE html>
+<html lang="en">
 
-button {
-    background: none;
-    color: #52528E;
-    border: 2px solid;
-    padding: 1em 2em;
-    font-size: 1em;
-}
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-button:hover {
-    border-color: whitesmoke;
-    color: whitesmoke;
-    box-shadow: 0 0.5em 0.5em -0.4em #52528E;
-    transform: translateY(-0.25em);
-    cursor: pointer;
-}
+<body>
+    <button>Submit</button>
+</body>
+
+</html>
