--- a/Section 9: Other Assorted Useful CSS Properties/PhotoBlog/index.html
+++ b/Section 9: Other Assorted Useful CSS Properties/PhotoBlog/index.html
@@ -9,19 +9,22 @@
     <nav>Photo Gallery</nav>
 
     <!-- 1-3 -->
-    <img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg"><img
-        src="http://c2.staticflickr.com/8/7218/7209301894_c99d3a33c2_h.jpg"><img
-        src="http://c2.staticflickr.com/8/7231/6947093326_df216540ff_b.jpg">
+    <img
+        src="https://images.unsplash.com/photo-1534620780923-1ce0db377c3f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=928&q=80"><img
+        src="https://images.unsplash.com/photo-1606422699425-f7122890005f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1475&q=80"><img
+        src="https://images.unsplash.com/photo-1625805866449-3589fe3f71a3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80">
 
     <!-- 4-6 -->
-    <img src="http://c1.staticflickr.com/9/8788/17367410309_78abb9e5b6_b.jpg"><img
-        src="http://c2.staticflickr.com/6/5814/20700286354_762c19bd3b_b.jpg"><img
-        src="http://c2.staticflickr.com/6/5647/21137202535_404bf25729_b.jpg">
+    <img
+        src="https://images.unsplash.com/photo-1558961917-2bfe20527f46?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"><img
+        src="https://images.unsplash.com/photo-1618902410393-6fe0a34bb79e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"><img
+        src="https://images.unsplash.com/photo-1618902345200-8c3fe6106608?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80">
 
     <!-- 7-9 -->
-    <img src="http://c2.staticflickr.com/6/5588/14991687545_5c8e1a2e86_b.jpg"><img
-        src="http://c2.staticflickr.com/4/3888/14878097108_5997041006_b.jpg"><img
-        src="http://c2.staticflickr.com/8/7579/15482110477_0b0e9e5421_b.jpg">
+    <img
+        src="https://images.unsplash.com/photo-1518206833770-69869d14248e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"><img
+        src="https://images.unsplash.com/photo-1641458820082-13755f4dd2f8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"><img
+        src="https://images.unsplash.com/photo-1607393037609-49d71859310e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80">
 
 
 </body>
