--- a/Section 9: Other Assorted Useful CSS Properties/PhotoBlog/index.html
+++ b/Section 9: Other Assorted Useful CSS Properties/PhotoBlog/index.html
@@ -2,16 +2,20 @@
 <html>
 
 <head>
-    <title>Photo Blog</title>
+    <title> Photo Blog</title>
 </head>
 
 <body>
-    <nav>Photo Gallery</nav>
+    <nav>ネオノワール</nav>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300&family=Yantramanav:wght@300&display=swap" rel="stylesheet">
 
     <!-- 1-3 -->
     <img
-        src="https://images.unsplash.com/photo-1534620780923-1ce0db377c3f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=928&q=80"><img
-        src="https://images.unsplash.com/photo-1606422699425-f7122890005f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1475&q=80"><img
+        src="https://images.unsplash.com/photo-1614465000772-1b302f406c47?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"><img
+        src="https://images.unsplash.com/photo-1572289758057-3e0f4327833b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"><img
         src="https://images.unsplash.com/photo-1625805866449-3589fe3f71a3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80">
 
     <!-- 4-6 -->
